# ECG

./: CMakeLists.txt
src/: DataProcessingSystem.cpp  DataProcessingSystem.h  Differential.h  EcgReader.cpp  EcgReader.h  ForwardProcessingStep.cpp  ForwardProcessingStep.h  Integral.h  Memory.cpp  Memory.h  globals.cpp  libs.h  main.cpp  ver.h.in
